@@ -554,9 +554,6 @@ const char *Sys_ConsoleInput (void)
 	static int	textlen = 0;
 	char		ch;
 
-	if (!isDedicated)
-		return NULL;
-
 	if (! kbhit())
 		return NULL;
 
